[upstream] gamma